[package]
authors = ["Stephan Buys <stephan.buys@panoptix.co.za>"]
name = "harvest-rs"
version = "0.1.0"
[dependencies]
chrono = "*"
env_logger = "*"
reqwest = "*"
serde = "~0.8"
serde_derive = "~0.8"
serde_json = "~0.8"

[dependencies.hyper]
default-features = false
version = "*"

[dev-dependencies]
chrono = "^0.2"

