[package]
authors = ["Stephan Buys <stephan.buys@panoptix.co.za>"]
name = "harvest"
version = "0.2.0"
[dependencies]
chrono = "*"
env_logger = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.hyper]
default-features = false
version = "*"

[dependencies.reqwest]
version = "*"
git = "https://github.com/seanmonstar/reqwest.git"


