[package]
name = "harvest"
version = "0.2.0"
description = "client library for Harvest time tracker"
keywords = ["http", "client", "harvest", "timesheet"]
repository = "https://github.com/stephanbuys/harvest-rs"
documentation = "https://docs.rs/harvest"
authors = ["Stephan Buys <hello@stephanbuys.com>"]
license = "MIT/Apache-2.0"
categories = ["web-programming::http-client"]

[dependencies]
chrono = "^0.4"
env_logger = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.hyper]
default-features = false
version = "^0.11"

[dependencies.reqwest]
version = "^0.6"
git = "https://github.com/seanmonstar/reqwest.git"


